@@ -127,6 +127,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
   classpath = sourceSets.contractTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
   maxWarnings = 0
   toolVersion = '10.12.0'
@@ -342,6 +348,8 @@ dependencies {
   testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: '3.2.3'
   testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: '3.2.3'
   testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: '3.2.3'
+
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
 
   //PACT testing
   contractTestImplementation group: 'com.google.guava', name: 'guava', version: '32.1.2-jre'
